add dependencies and break the project

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,12 @@ name = "pypi"
 flask = "*"
 
 [dev-packages]
+black = "*"
+isort = "*"
+flake8 = "*"
+mypy = "*"
+pytest = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.9"
