fix the project

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,14 +12,14 @@ max-complexity = 18
 select = B,C,E,F,W,T4
 
 [mypy]
-files=flaskr,test
+files=learn_app,test
 ignore_missing_imports=true
 
 [tool:pytest]
 testpaths=test
 
 [run]
-source = flaskr
+source = learn_app
 
 [report]
 exclude_lines =
