--- a/setup.cfg
+++ b/setup.cfg
@@ -12,11 +12,11 @@ max-complexity = 18
 select = B,C,E,F,W,T4
 
 [mypy]
-files=learn_app,test
+files=learn_app,tests
 ignore_missing_imports=true
 
 [tool:pytest]
-testpaths=test
+testpaths=tests
 
 [run]
 source = learn_app
