make 100% test coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ ignore = E203, E266, E501, W503
 max-line-length = 88
 max-complexity = 18
 select = B,C,E,F,W,T4
+exclude = conftest.py
 
 [mypy]
 files=learn_app,tests
@@ -17,23 +18,3 @@ ignore_missing_imports=true
 
 [tool:pytest]
 testpaths=tests
-
-[run]
-source = learn_app
-
-[report]
-exclude_lines =
-    # Have to re-enable the standard pragma
-    pragma: no cover
-
-    # Don't complain about missing debug-only code:
-    def __repr__
-    if self\.debug
-
-    # Don't complain if tests don't hit defensive assertion code:
-    raise AssertionError
-    raise NotImplementedError
-
-    # Don't complain if non-runnable code isn't run:
-    if 0:
-    if __name__ == .__main__.:
