--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-python-dotenv = "*"
+flask = "==1.1.2"
+python-dotenv = "==0.15.0"
 
 [dev-packages]
-black = "*"
-isort = "*"
-flake8 = "*"
-mypy = "*"
-pytest = "*"
-pytest-cov = "*"
+black = "==20.8b1"
+isort = "==5.7.0"
+flake8 = "==3.8.4"
+mypy = "==0.812"
+pytest = "==6.2.2"
+pytest-cov = "==2.11.1"
 
 [requires]
 python_version = "3.9"
