Create docker-compose with mysql

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 FLASK_APP=learn_app/main.py
 FLASK_ENV=development
+MYSQL_ROOT_PASSWORD=root_pass
+MYSQL_DATABASE=test_schema
+MYSQL_PORT_1=127.0.0.1:3310
+MYSQL_PORT_2=127.0.0.1:33100
+MYSQL_VOLUME=./volumes/mysql
