Add DB integration + some refactoring in main.py

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 FLASK_APP=learn_app/main.py
 FLASK_ENV=development
-MYSQL_ROOT_PASSWORD=root_pass
-MYSQL_DATABASE=test_schema
-MYSQL_PORT_1=127.0.0.1:3310
-MYSQL_PORT_2=127.0.0.1:33100
+DB_TYPE=mysql
+DB_USER=root
+DB_PASSWORD=root_pass
+DB_NAME=test_schema
+DB_HOST=127.0.0.1
+DB_PORT_1=3310
+DB_PORT_2=33100
 MYSQL_VOLUME=./volumes/mysql
