--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 black = "==20.8b1"
 flake8 = "==3.8.4"
 flask = "==2.0.1"
+Flask-SQLAlchemy = "==2.5.1"
 isort = "==5.7.0"
 mypy = "==0.812"
 pytest = "==6.2.2"
