add failing test_account_saved_to_db

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ flask = "==2.0.1"
 Flask-SQLAlchemy = "==2.5.1"
 isort = "==5.7.0"
 mypy = "==0.812"
+mysqlclient = "==2.0.3"
 pytest = "==6.2.2"
 pytest-cov = "==2.11.1"
 python-dotenv = "==0.15.0"
